[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-engine-v2"
version = "0.1.0"
description = "A CLI application for parsing and processing document files"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
docengine = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
